--- a/package.json
+++ b/package.json
@@ -1,24 +1,59 @@
 {
-  "name": "lendsqr-fe-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.2"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.2"
-  }
+   "name": "lendsqr-fe-test",
+   "version": "0.1.0",
+   "private": true,
+   "scripts": {
+      "dev": "next dev",
+      "build": "next build",
+      "start": "next start",
+      "lint": "next lint"
+   },
+   "dependencies": {
+      "axios": "^1.6.7",
+      "bootstrap": "^5.3.3",
+      "classnames": "^2.5.1",
+      "date-fns": "^3.3.1",
+      "formsy-react": "^2.3.0",
+      "nanoid": "^5.0.6",
+      "next": "14.1.2",
+      "react": "^18",
+      "react-dom": "^18",
+      "sass": "^1.71.1"
+   },
+   "devDependencies": {
+      "@svgr/webpack": "^8.1.0",
+      "@types/node": "^20",
+      "@types/react": "^18",
+      "@types/react-dom": "^18",
+      "eslint": "^8",
+      "eslint-config-next": "14.1.2",
+      "eslint-config-prettier": "^9.1.0",
+      "eslint-plugin-prettier": "^5.1.3",
+      "prettier": "^3.2.5",
+      "typescript": "^5"
+   },
+   "eslintConfig": {
+      "extends": [
+         "react-app",
+         "react-app/jest",
+         "prettier"
+      ],
+      "plugins": [
+         "prettier"
+      ],
+      "rules": {
+         "prettier/prettier": [
+            "warn",
+            {
+               "endOfLine": "auto",
+               "bracketSpacing": false,
+               "jsxBracketSameLine": true,
+               "singleQuote": true,
+               "trailingComma": "all",
+               "tabWidth": 3,
+               "printWidth": 150
+            }
+         ]
+      }
+   }
 }
