--- a/package.json
+++ b/package.json
@@ -9,15 +9,20 @@
       "lint": "next lint"
    },
    "dependencies": {
+      "@redux-devtools/extension": "^3.3.0",
       "axios": "^1.6.7",
       "bootstrap": "^5.3.3",
       "classnames": "^2.5.1",
       "date-fns": "^3.3.1",
       "formsy-react": "^2.3.0",
+      "localforage": "^1.10.0",
       "nanoid": "^5.0.6",
       "next": "14.1.2",
       "react": "^18",
       "react-dom": "^18",
+      "react-redux": "^9.1.0",
+      "redux": "^5.0.1",
+      "redux-thunk": "^3.1.0",
       "sass": "^1.71.1"
    },
    "devDependencies": {
