--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
    },
    "dependencies": {
       "@redux-devtools/extension": "^3.3.0",
+      "@reduxjs/toolkit": "^2.2.1",
       "axios": "^1.6.7",
       "bootstrap": "^5.3.3",
       "classnames": "^2.5.1",
@@ -18,10 +19,15 @@
       "localforage": "^1.10.0",
       "nanoid": "^5.0.6",
       "next": "14.1.2",
+      "next-redux-wrapper": "^8.1.0",
       "react": "^18",
       "react-dom": "^18",
+      "react-lottie": "^1.2.4",
       "react-redux": "^9.1.0",
+      "react-svg-star-rating": "^2.1.2",
       "redux": "^5.0.1",
+      "redux-persist": "^6.0.0",
+      "redux-saga": "^1.3.0",
       "redux-thunk": "^3.1.0",
       "sass": "^1.71.1"
    },
@@ -30,6 +36,7 @@
       "@types/node": "^20",
       "@types/react": "^18",
       "@types/react-dom": "^18",
+      "@types/react-lottie": "^1.2.10",
       "eslint": "^8",
       "eslint-config-next": "14.1.2",
       "eslint-config-prettier": "^9.1.0",
