user-details page

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
       "lint": "next lint"
    },
    "dependencies": {
+      "@popperjs/core": "^2.11.8",
       "@redux-devtools/extension": "^3.3.0",
       "@reduxjs/toolkit": "^2.2.1",
       "axios": "^1.6.7",
