responsiveness and encrypting data in localForage - IndexDB

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
       "axios": "^1.6.7",
       "bootstrap": "^5.3.3",
       "classnames": "^2.5.1",
+      "crypto-js": "^4.2.0",
       "date-fns": "^3.3.1",
       "formsy-react": "^2.3.0",
       "localforage": "^1.10.0",
@@ -25,6 +26,7 @@
       "react-dom": "^18",
       "react-lottie": "^1.2.4",
       "react-redux": "^9.1.0",
+      "react-responsive": "^9.0.2",
       "react-svg-star-rating": "^2.1.2",
       "redux": "^5.0.1",
       "redux-persist": "^6.0.0",
